--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/chart.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/chart.html
@@ -1,14 +1,43 @@
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <style>
   #myChart {
-    width: 700px;
-    /* height: 00px; */
+    position: relative;
+    width: 800px;
+  }
+
+  .chart-text {
+    position: absolute;
+    font-size: 16px;
+    font-weight: bold;
+    color: rgb(40, 38, 38);
+  }
+  #c1 {
+    top: 0;
+    left: 0;
+  }
+  #c2 {
+    bottom: 0;
+    right: 0;
+  }
+  #c3 {
+    bottom: 0;
+    left: 0;
+  }
+  .chartCanvas {
+    position: relative;
+    width: 800px;
   }
 </style>
 
-<canvas id="myChart"></canvas>
+<div id="myChart">
+  <canvas class="chartCanvas"></canvas>
+  <div id="c1" class="chart-text">{{c2}}</div>
+  <div id="c2" class="chart-text">{{c1}}</div>
+  <div id="c3" class="chart-text">{{c3}}</div>
+</div>
+
 <script>
-  const ctx = document.getElementById("myChart");
+  const ctx = document.querySelector(".chartCanvas");
 
   // The following data is used to create the triangle that contains the curves
   x = [0, 1, 0, 0];
@@ -25,6 +54,7 @@
       showLine: true,
       borderColor: "black",
       backgroundColor: "black", // Set a blue fill color for the curve
+      legend: false,
     },
   ];
 
@@ -42,7 +72,10 @@
     const doc = parser.parseFromString(graph, "text/html");
     const jsonEncodedString = doc.documentElement.textContent;
 
-    //console.log(jsonEncodedString);
+    const c1 = "{{c1}}";
+    const c2 = "{{c2}}";
+    const c3 = "{{c3}}";
+    console.log(c1);
     curve_list = JSON.parse(jsonEncodedString);
     const colors = ["red", "blue", "green"]; // Define an array of colors
 
@@ -67,6 +100,19 @@
         responsive: false,
         maintainAspectRatio: false,
         aspectRatio: 1,
+        plugins: {
+          legend: {
+            display: false,
+          },
+        },
+        layout: {
+          padding: {
+            left: 50,
+            right: 50,
+            top: 50,
+            bottom: 50,
+          },
+        },
       },
     });
   }
