--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/index.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/index.html
@@ -1,7 +1,7 @@
 {% extends 'ternary_azeotrope/layout.html' %} {% load static %} {% block title%}
 Home {%endblock%} {% block head %}
 
-<link rel="stylesheet" href="{% static 'index.css' %}" />
+<link rel="stylesheet" href="{% static 'css/index.css' %}" />
 <script
   type="text/javascript"
   src="{% static 'js/index.js'%}"
