--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/tables.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/tables.html
@@ -1,110 +1,213 @@
 <html>
-  <body>
-    <div class="table-container">
-      <h2 id="table">Compounds for Antoine model</h2>
-      <input
-        type="text"
-        id="compound-filter"
-        placeholder="Search for a compound..."
-      /><br /><br />
-      <table id="compound-table">
-        <thead>
-          <tr>
-            {% for key in component_keys %}
-            <th>{{key}}</th>
-            {% endfor %}
-          </tr>
-        </thead>
-        <tbody>
-          {% for element in components %}
-          <tr>
-            <td>{{ element.id }}</td>
-            <td>{{ element.name }}</td>
-            <td>{{ element.a }}</td>
-            <td>{{ element.b }}</td>
-            <td>{{ element.c }}</td>
-          </tr>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
+
+<body>
+  <div class="table-container">
+    <h2 id="table">Compounds for Antoine model</h2>
+    <input type="text" id="compound-filter" placeholder="Search for a compound..." /><br /><br />
+    <table id="compound-table">
+      <thead>
+        <tr>
+          {% for key in component_keys %}
+          <th>{{key}}</th>
           {% endfor %}
-        </tbody>
-      </table>
-    </div>
+        </tr>
+      </thead>
+      <tbody>
+        {% for element in components %}
+        <tr id="row{{ forloop.counter }}">
+          <td noneditable="true">{{ element.id }}</td>
+          <td editable="false">{{ element.name }}</td>
+          <td editable="false">{{ element.a }}</td>
+          <td editable="false">{{ element.b }}</td>
+          <td editable="false">{{ element.c }}</td>
+          <td editable="false">
+            <button onclick="toggleEdit('row{{ forloop.counter }}')">
+              <i class="fas fa-pencil-alt"></i>
+            </button>
+          </td>
 
-    <div class="table-container">
-      <h2 id="table">Binary relations for NRTL model</h2>
-      <input
-        type="text"
-        id="search"
-        onkeyup="perform_search()"
-        placeholder="Search for compounds..."
-      />
-      <table id="binary-relations-table">
-        <thead>
-          <tr>
-            {% for key in relation_keys %}
-            <th>{{key}}</th>
-            {% endfor %}
-          </tr>
-        </thead>
-        <tbody>
-          {% for element in relations %}
-          <tr>
-            <td>{{ element.id }}</td>
-            <td>{{ element.component1.name }}</td>
-            <td>{{ element.component2.name }}</td>
-            <td>{{ element.a12 }}</td>
-            <td>{{ element.a21 }}</td>
-            <td>{{ element.alpha }}</td>
-          </tr>
+          <td editable="false">
+            <button onclick="saveChanges('row{{ forloop.counter }}')" class="save-row">
+              <i class="fa-solid fa-floppy-disk"></i>
+            </button>
+          </td>
+
+
+          <td editable="false">
+            <button onclick="cancelChanges('row{{ forloop.counter }}')" class="cancel-button">
+              <i class="fas fa-times-circle"></i>
+            </button>
+          </td>
+        </tr>
+
+        {% endfor %}
+      </tbody>
+    </table>
+  </div>
+
+  <div class="table-container">
+    <h2 id="table">Binary relations for NRTL model</h2>
+    <input type="text" id="search" onkeyup="perform_search()" placeholder="Search for compounds..." />
+    <table id="binary-relations-table">
+      <thead>
+        <tr>
+          {% for key in relation_keys %}
+          <th>{{key}}</th>
           {% endfor %}
-        </tbody>
-      </table>
-    </div>
+        </tr>
+      </thead>
+      <tbody>
+        {% for element in relations %}
+        <tr>
+          <td>{{ element.id }}</td>
+          <td>{{ element.component1.name }}</td>
+          <td>{{ element.component2.name }}</td>
+          <td>{{ element.a12 }}</td>
+          <td>{{ element.a21 }}</td>
+          <td>{{ element.alpha }}</td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </div>
 
-    <script type="text/javascript">
-      // Get the input field and table
-      let filterInput = document.getElementById("compound-filter");
-      let table = document.getElementById("compound-table");
+  <script type="text/javascript">
+    let fic 
+  </script>
+  <script type="text/javascript">
+    // Get the input field and table
+    let filterInput = document.getElementById("compound-filter");
+    let table = document.getElementById("compound-table");
+    // Add event listener for input
+    filterInput.addEventListener("keyup", function () {
+      let filterValue = filterInput.value.toLowerCase();
+      // Loop through table rows
+      for (let i = 1; i < table.rows.length; i++) {
+        let row = table.rows[i];
+        let name = row.cells[1].innerText.toLowerCase();
 
-      // Add event listener for input
-      filterInput.addEventListener("keyup", function () {
-        let filterValue = filterInput.value.toLowerCase();
-
-        // Loop through table rows
-        for (let i = 1; i < table.rows.length; i++) {
-          let row = table.rows[i];
-          let name = row.cells[1].innerText.toLowerCase();
-
-          if (name.indexOf(filterValue) > -1) {
-            row.style.display = "";
-          } else {
-            row.style.display = "none";
-          }
+        if (name.indexOf(filterValue) > -1) {
+          row.style.display = "";
+        } else {
+          row.style.display = "none";
         }
-      });
+      }
+    });
 
-      function perform_search() {
-        var input, filter, table, tr, td, i, txtValue;
-        input = document.getElementById("search");
-        filter = input.value.toUpperCase();
-        table = document.getElementById("binary-relations-table");
-        tr = table.getElementsByTagName("tr");
-        for (i = 0; i < tr.length; i++) {
-          td1 = tr[i].getElementsByTagName("td")[1];
-          td2 = tr[i].getElementsByTagName("td")[2];
-          if (td1 || td2) {
-            txtValue1 = td1.textContent || td1.innerText;
-            txtValue2 = td2.textContent || td2.innerText;
-            if (
-              txtValue1.toUpperCase().indexOf(filter) > -1 ||
-              txtValue2.toUpperCase().indexOf(filter) > -1
-            ) {
-              tr[i].style.display = "";
-            } else {
-              tr[i].style.display = "none";
-            }
+
+
+    function perform_search() {
+      var input, filter, table, tr, td, i, txtValue;
+      input = document.getElementById("search");
+      filter = input.value.toUpperCase();
+      table = document.getElementById("binary-relations-table");
+      tr = table.getElementsByTagName("tr");
+      for (i = 0; i < tr.length; i++) {
+        td1 = tr[i].getElementsByTagName("td")[1];
+        td2 = tr[i].getElementsByTagName("td")[2];
+        if (td1 || td2) {
+          txtValue1 = td1.textContent || td1.innerText;
+          txtValue2 = td2.textContent || td2.innerText;
+          if (
+            txtValue1.toUpperCase().indexOf(filter) > -1 ||
+            txtValue2.toUpperCase().indexOf(filter) > -1
+          ) {
+            tr[i].style.display = "";
+          } else {
+            tr[i].style.display = "none";
           }
         }
       }
-    </script>
-  </body>
+    }
+  </script>
+
+
+  <script>
+    var originalValues = new Map();
+    function toggleEdit(rowId) {
+      let row = document.getElementById(rowId);
+      const data = {}
+      const keys = ["id", "name", "a", "b", "c"]
+      let cells = row.getElementsByTagName("td");
+      for (let i = 0; i < cells.length - 3; i++) {
+        if (cells[i].getAttribute("editable") === 'false' || cells[i].getAttribute("editable") === null) {
+          if (cells[i].getAttribute("noneditable") === "true") {
+            data[keys[i]] = cells[i].innerHTML;
+            continue;
+          }
+          data[keys[i]] = cells[i].innerHTML;
+          let input = document.createElement("input");
+          input.type = "text";
+          input.value = cells[i].innerHTML;
+          input.style.width = cells[i].offsetWidth + "px";
+          cells[i].innerHTML = "";
+          cells[i].appendChild(input);
+          cells[i].setAttribute("editable", "true");
+          data[keys[i]]
+        }
+        else {
+          if (cells[i].getAttribute("noneditable") === "true") continue;
+          cells[i].setAttribute("editable", "false");
+          let input = cells[i].querySelector("input");
+          cells[i].innerHTML = `${input.value}`;
+          data[keys[i]] = input.value;
+        }
+      }
+      originalValues.set(rowId, data)
+    }
+
+    async function saveChanges(rowId) {
+      row = document.getElementById(rowId);
+      const keys = ['id', 'name', 'a', 'b', 'c']
+      data = {}
+      var cells = row.getElementsByTagName("td");
+      for (var j = 0; j < cells.length - 3; j++) {
+        var input = cells[j].querySelector("input");
+        if (input) {
+          data[keys[j]] = input.value;
+          this.toggleEdit(rowId);
+        }
+        else {
+          data[keys[j]] = cells[j].innerHTML;
+        }
+      }
+      console.log("data", data) // FORM OF THE DATA
+      await fetch(`http://localhost:8000/update_component/${data.id}`, {
+        method: 'PUT',
+        headers: { "Content-Type": "application/json" }, body: data
+      });
+    }
+
+    function cancelChanges(rowId) {
+      var row = document.getElementById(rowId);
+      const keys = ["id", "name", "a", "b", "c"]
+      // Get the original values of the row
+      // Set the input values to the original values
+      let cells = row.getElementsByTagName("td");
+      let editable = cells[1].getAttribute("editable");
+      for (let i = 0; i < cells.length - 3; i++) {
+        if (editable === "true") {
+          let input = cells[i].querySelector("input");
+          if (input) input.value = originalValues.get(rowId)[keys[i]];
+        }
+      }
+      if (editable === "true") toggleEdit(rowId);
+    }
+
+
+  </script>
+
+
+
+
+
+  }
+  </script>
+
+
+
+</body>
+
 </html>
