--- a/backend_django/static/css/menu.css
+++ b/backend_django/static/css/menu.css
@@ -7,6 +7,7 @@
   background-color: #ccc;
   transition: left 0.5s;
   z-index: 2;
+
 }
 
 #menu.show {
@@ -35,6 +36,7 @@ p {
   top: 0;
   right: 0;
   padding: 10px;
+  background-color: aquamarine;
 }
 
 #menu-close-icon i {
