--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/chart.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/chart.html
@@ -38,6 +38,8 @@
   <div id="c3" class="chart-text">{{c3}}</div>
 </div>
 
+<script src="../../../static/js/index.js"></script>
+
 <script>
   function download_as_html() {
     var html_content = "data:text/html," + diagram.innerHTML;
@@ -99,6 +101,14 @@
     { x: 0, y: 1 },
     { x: 0, y: 0 },
   ];
+
+  baseTriangleEquilateral = [
+    { x: 0, y: 0 },
+    { x: 1, y: 0 },
+    { x: 1 / 2, y: Math.sqrt(3) / 2 },
+    { x: 0, y: 0 },
+  ];
+
   datasets = [
     {
       data: baseTriangle,
