--- a/backend_django/ternary_azeotrope/templates/ternary_azeotrope/chart.html
+++ b/backend_django/ternary_azeotrope/templates/ternary_azeotrope/chart.html
@@ -38,8 +38,6 @@
   <div id="c3" class="chart-text">{{c3}}</div>
 </div>
 
-<script src="../../../static/js/index.js"></script>
-
 <script>
   function enable_download() {
     const downloadBtn = document.createElement("i");
@@ -65,6 +63,18 @@
   }
 
   const ctx = document.querySelector(".chartCanvas");
+
+  var selectedOption = document.querySelector(
+    '.radio-group input[name="option"]:checked'
+  ).value;
+
+  var selected_type;
+  if ((selectedOption = 1)) {
+    selected_type = "Rectangle";
+  } else {
+    selected_type = "Equilateral";
+  }
+  console.log(selected_type);
 
   x = [0, 1, 0, 0];
   y = [0, 0, 1, 0];
